k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app
  namespace: default

spec:
  replicas: 5
  selector:
    matchLabels:
      app: movie-app

  template:
    metadata:
      labels:
        app: movie-app

    spec:
      containers:
        - name: movie-app
          image: nikhil23407/movie-app:build-20
          ports:
            - containerPort: 5000
