k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-app-service
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: movie-app

  ports:
    - port: 80
      targetPort: 5000
