k8s/grafana-prometheus-ingrss.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Note the change here: we use $1 to capture the remainder
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: a6691a6983f224c9480c1cf3cc8de029-a11424bcf4645132.elb.eu-north-1.amazonaws.com
      http:
        paths:
          - path: /grafana/?(.*)  # Simplified regex
            pathType: ImplementationSpecific
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
