k8s/serivice-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: a6691a6983f224c9480c1cf3cc8de029-a11424bcf4645132.elb.eu-north-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-app-service
                port:
                  number: 80
